# TheGame

./: .clang-tidy  .clangd  .gitignore  Build_release.sh  CLAUDE.md  CMakeLists.txt  README.txt  build_debug.sh  imgui.ini  run.sh  runOFF.sh  runOFF_debug.sh  runON.sh  runON_debug.sh  valgrind.sh
assets/fonts/: 39335_UniversCondensed.ttf:Zone.Identifier
assets/images/: NES - Super Mario Bros. - Backgrounds - Background 1 (Mountains).png:Zone.Identifier  NES - Super Mario Bros. - Backgrounds - Background 3 (Clouds).png:Zone.Identifier  NES - Super Mario Bros. - Enemies & Bosses - Enemies & Bosses.png:Zone.Identifier  NES - Super Mario Bros. - Miscellaneous - Item and Brick Blocks.png:Zone.Identifier  NES - Super Mario Bros. - Miscellaneous - Items, Objects and NPCs.png:Zone.Identifier  NES - Super Mario Bros. - Miscellaneous - Tileset.png:Zone.Identifier  NES - Super Mario Bros. - Playable Characters - Mario & Luigi.png:Zone.Identifier  brick.png:Zone.Identifier  bush.png:Zone.Identifier  bushbig.png:Zone.Identifier  cloudbig.png:Zone.Identifier  explosion128.png:Zone.Identifier  ground.png:Zone.Identifier  mario-custom-16.png:Zone.Identifier
game_data/: assets.txt  level1.txt  level3.txt
include/: Action.hpp  Animation.hpp  Assets.h  Components.hpp  Entity.hpp  EntityManager.h  GameEngine.h  Physics.hpp  Scene.h  Scene_Menu.h  Scene_Play.h  Vec2.hpp
src/: Assets.cpp  EntityManager.cpp  GameEngine.cpp  Scene.cpp  Scene_Menu.cpp  Scene_Play.cpp  main.cpp
